# backend_template

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  example.env  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 471671c62a47_initial_schema_setup.py
src/: main.py
src/api/dependencies/: auth.py
src/api/routers/: __init__.py
src/core/auth/: README.md  api_key_utils.py  jwt.py  password.py
src/core/config/: settings.py
src/core/db/: __init__.py  session.py
src/core/exceptions/: __init__.py  base.py
src/core/logging/: README.md  __init__.py  logger.py
src/core/logging/formatters/: __init__.py  base.py  json.py  standard.py
src/core/logging/handlers/: __init__.py  base.py  console.py  file.py
src/domains/auth/: README.md
src/domains/auth/api/: router.py
src/domains/auth/api/v1/: __init__.py  api_key.py  auth.py
src/domains/auth/models/: __init__.py  api_key.py  user.py  user_auth.py
src/domains/auth/services/: __init__.py  api_key_service.py  auth_service.py  user_service.py
src/domains/auth/services/repositories/: __init__.py  (+2 more)
src/domains/docproc/api/: router.py
src/domains/docproc/services/: mvp_service.py
tests/: README.md  __init__.py  conftest.py
tests/api/dependencies/: test_auth.py  test_auth_integration.py
tests/core/auth/: test_api_key_utils.py  test_jwt.py  test_password.py
tests/core/logging/: test_formatters.py  test_handlers.py  test_logger.py
tests/domains/auth/: test_user_model.py
tests/domains/auth/services/: __init__.py  test_api_key_service.py  test_auth_service.py
(+3 files in other folders)
